[gd_scene load_steps=2 format=3 uid="uid://d1o1sfulf16jc"]

[ext_resource type="Script" path="res://hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="BottomPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="HealthCross" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "+"

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = -70.0
offset_right = 180.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "200"

[node name="AmmoClipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -70.0
offset_right = -180.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 56
text = "32"
horizontal_alignment = 2

[node name="AmmoSeparator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -65.0
offset_right = -165.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 36
text = "|"
horizontal_alignment = 1

[node name="AmmoReserveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -60.0
offset_right = -40.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "64"
horizontal_alignment = 2

[node name="WeaponNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -25.0
offset_right = -40.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "WEAPON"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -65.0
offset_right = 320.0
offset_bottom = -35.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Speed: 0"

[node name="ClassLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -40.0
offset_right = 320.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "SOLDIER"

[node name="AmmoLabel" type="Label" parent="."]
visible = false
layout_mode = 1
text = ""

[node name="ChangeClassButton" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 20
text = "MENU"
